--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
 <body>
   <div id="vue-app">
     <a href="/#/parentsignup">Parent Signup</a>
+    <a href="/#/childsignup">Child Signup</a>
     <router-view></router-view>
 
   </div>
@@ -31,7 +32,37 @@
   <div class="vue-component">
 
     <div class="container">
-      <h1>Signup</h1>
+      <h1>Parent Signup</h1>
+      <ul>
+        <li class="text-danger" v-for="error in errors">{{ error }}</li>
+      </ul>
+      <div class="form-group">
+        <label>Username:</label> 
+        <input type="text" class="form-control" v-model="name">
+      </div>
+      <div class="form-group">
+        <label>Email:</label>
+        <input type="email" class="form-control" v-model="email">
+      </div>
+      <div class="form-group">
+        <label>Password:</label>
+        <input type="password" class="form-control" v-model="password">
+      </div>
+      <div class="form-group">
+        <label>Password confirmation:</label>
+        <input type="password" class="form-control" v-model="passwordConfirmation">
+      </div>
+      <button class="btn btn-primary" v-on:click="submit()">Submit</button>
+    </div>
+
+  </div>
+</template>
+
+<template id="child-signup-page">
+  <div class="vue-component">
+
+    <div class="container">
+      <h1>Child Signup</h1>
       <ul>
         <li class="text-danger" v-for="error in errors">{{ error }}</li>
       </ul>
