--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
   <div id="vue-app">
     <a href="/#/parentsignup">Parent Signup</a>
     <a href="/#/childsignup">Child Signup</a>
+    <a href="/#/childlogin">Child Login</a>
     <router-view></router-view>
 
   </div>
@@ -24,6 +25,8 @@
     <div v-for="product in products">
     <p>name: {{product.name}}</p>
     <p>price: {{product.salePrice}}</p>
+   
+    <a v-bind:href="'/#/products/' + product.id" class="btn btn-primary">Button</a>
     </div>
   </div>
 </template>
@@ -85,5 +88,48 @@
       <button class="btn btn-primary" v-on:click="submit()">Submit</button>
     </div>
 
+  </div>
+</template>
+
+<template id="child-login-page">
+  <div class="vue-component">
+
+    <div class="container">
+      <h1> Child Login</h1>
+      <ul>
+        <li class="text-danger" v-for="error in errors">{{ error }}</li>
+      </ul>
+      <div class="form-group">
+        <label>Email:</label>
+        <input type="email" class="form-control" v-model="email">
+      </div>
+      <div class="form-group">
+        <label>Password:</label>
+        <input type="password" class="form-control" v-model="password">
+      </div>
+      <button class="btn btn-primary" v-on:click="submit()">Submit</button>
+    </div>
+
+  </div>
+</template>
+
+<!-- <template id="carted-products-page">
+  <div class="vue-component">
+
+    <h1>{{ message }}</h1>
+    <div v-for="product in products">
+    <p>name: {{product.name}}</p>
+    <p>price: {{product.salePrice}}</p>
+    </div>
+  </div>
+</template> -->
+
+<template id="products-show-page">
+  <div>
+   <!--  {{message}}
+    {{product}} -->
+    <h1>{{ message }}</h1>
+    <p>name: {{product.name}}</p>
+    <!-- <p>price: {{product.salePrice}}</p> -->
   </div>
 </template>
