--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
     <a href="/#/parentsignup">Parent Signup</a>
     <a href="/#/childsignup">Child Signup</a>
     <a href="/#/childlogin">Child Login</a>
+    <a href="/#/parentlogin">Parent Login</a>
     <router-view></router-view>
 
   </div>
@@ -70,6 +71,10 @@
         <li class="text-danger" v-for="error in errors">{{ error }}</li>
       </ul>
       <div class="form-group">
+        <label>Parent ID:</label> 
+        <input type="text" class="form-control" v-model="parent_user_id">
+      </div>
+      <div class="form-group">
         <label>Username:</label> 
         <input type="text" class="form-control" v-model="name">
       </div>
@@ -113,6 +118,28 @@
   </div>
 </template>
 
+<template id="parent-login-page">
+  <div class="vue-component">
+
+    <div class="container">
+      <h1> Parent Login</h1>
+      <ul>
+        <li class="text-danger" v-for="error in errors">{{ error }}</li>
+      </ul>
+      <div class="form-group">
+        <label>Email:</label>
+        <input type="email" class="form-control" v-model="email">
+      </div>
+      <div class="form-group">
+        <label>Password:</label>
+        <input type="password" class="form-control" v-model="password">
+      </div>
+      <button class="btn btn-primary" v-on:click="submit()">Submit</button>
+    </div>
+
+  </div>
+</template>
+
 <template id="carted-products-page">
   <div>
 
@@ -121,8 +148,23 @@
       <!-- <p>{{carted_products}}</p> -->
       <p>{{carted_product.status}}</p>
       <p>{{carted_product.product_id}}</p>
-    </div>
 
+    </div>
+    <button class="btn btn-primary" v-on:click="submit()">Request</button>
+  </div>
+</template>
+
+<template id="requests-page">
+  <div>
+
+    <h1>{{ message }}</h1>
+    <div v-for="carted_product in carted_products">
+      <!-- <p>{{carted_products}}</p> -->
+      <p>{{carted_product.status}}</p>
+      <p>{{carted_product.product_id}}</p>
+
+    </div>
+    <button class="btn btn-primary" v-on:click="submit()">Request</button>
   </div>
 </template>
 
